Update for Minecraft 1.18, drop support for 1.14 and 1.15
Now requires Minecraft 1.16+ and Java 17+