@@ -20,7 +20,7 @@ public final class VillagerReflection {
     private VillagerReflection() {
     }
 
-    private static final Class<?> BehaviorController_class;
+    private static final Class<?> Brain_class;
     private static final Class<?> BehaviorVillageHeroGift_class;
     private static final Class<?> MerchantRecipeList_class = Crafty.needNMSClassOrElse("MerchantRecipeList", "net.minecraft.world.item.trading.MerchantRecipeList");
     private static final Class<?> CraftAbstractVillager_class = Crafty.needCraftClass("entity.CraftAbstractVillager");
@@ -33,29 +33,18 @@ public final class VillagerReflection {
     private static final MethodHandle CraftAbstractVillager_getHandle = Objects.requireNonNull(Crafty.findMethod(CraftAbstractVillager_class, "getHandle", EntityVillagerAbstract_class), "CraftAbstractVillager#getHandle");
     private static final MethodHandle CraftVillager_getHandle = Objects.requireNonNull(Crafty.findMethod(CraftVillager_class, "getHandle", EntityVillager_class), "CraftVillager#getHandle");
     private static final MethodHandle CraftWanderingTrader_getHandle = Objects.requireNonNull(Crafty.findMethod(CraftWanderingTrader_class, "getHandle", EntityVillagerTrader_class), "CraftWanderingTrader#getHandle");
-    private static final MethodHandle EntityLiving_getBehaviorController;
+    private static final MethodHandle LivingEntity_getBrain;
     private static final Method EntityVillagerAbstract_updateTrades;
     private static final Field EntityVillagerAbstract_trades;
-    private static final Field BehaviorController_behaviorsMap;
+    private static final Field Brain_availableBehaviorsByPriority;
     private static final Field EntityVillagerTrader_despawnTimer;
 
     static {
-        final String updateTradesMethodName;
-        switch (getMinecraftVersion()) {
-            case 14:
-                updateTradesMethodName = "eh";
-                break;
-            case 15:
-                updateTradesMethodName = "eC";
-                break;
-            case 16:
-                updateTradesMethodName = "eW";
-                break;
-            case 17:
-            default:
-                updateTradesMethodName = "fE";
-                break;
-        }
+        final String updateTradesMethodName = switch (getMinecraftVersion()) {
+            case 16 -> "eW";
+            case 17 -> "fE";
+            default -> "fG"; // 1.18
+        };
         try {
             EntityVillagerAbstract_updateTrades = EntityVillagerAbstract_class.getDeclaredMethod(updateTradesMethodName);
             EntityVillagerAbstract_updateTrades.setAccessible(true);
@@ -69,23 +58,27 @@ public final class VillagerReflection {
                     .orElseThrow(() -> new IllegalStateException("Couldn't find despawn timer field!"));
             EntityVillagerTrader_despawnTimer.setAccessible(true);
 
-            if (isPaper() && getMinecraftVersion() >= 16) {
+            if (isPaper()) {
                 BehaviorVillageHeroGift_class = Crafty.needNMSClassOrElse("BehaviorVillageHeroGift", "net.minecraft.world.entity.ai.behavior.BehaviorVillageHeroGift");
-                BehaviorController_class = Crafty.needNMSClassOrElse("BehaviorController", "net.minecraft.world.entity.ai.BehaviorController");
+                Brain_class = Crafty.needNMSClassOrElse("BehaviorController", "net.minecraft.world.entity.ai.BehaviorController");
                 final String mapName;
                 if (getMinecraftVersion() == 16) {
                     mapName = "e";
-                } else /* if (ver >=17) */ {
+                } else { // 1.17, 1.18
                     mapName = "f";
                 }
-                BehaviorController_behaviorsMap = BehaviorController_class.getDeclaredField(mapName);
-                BehaviorController_behaviorsMap.setAccessible(true);
-                EntityLiving_getBehaviorController = Objects.requireNonNull(Crafty.findMethod(EntityLiving_class, "getBehaviorController", BehaviorController_class), "EntityLiving#getBehaviorController");
+                Brain_availableBehaviorsByPriority = Brain_class.getDeclaredField(mapName);
+                Brain_availableBehaviorsByPriority.setAccessible(true);
+                final String getBrainName = switch (getMinecraftVersion()) {
+                    case 16, 17 -> "getBehaviorController";
+                    default -> "dt";
+                };
+                LivingEntity_getBrain = Objects.requireNonNull(Crafty.findMethod(EntityLiving_class, getBrainName, Brain_class), "LivingEntity#getBrain");
             } else {
                 BehaviorVillageHeroGift_class = null;
-                BehaviorController_class = null;
-                BehaviorController_behaviorsMap = null;
-                EntityLiving_getBehaviorController = null;
+                Brain_class = null;
+                Brain_availableBehaviorsByPriority = null;
+                LivingEntity_getBrain = null;
             }
         } catch (final ReflectiveOperationException e) {
             throw new IllegalStateException("Failed to initialize reflection helper", e);
@@ -94,7 +87,7 @@ public final class VillagerReflection {
 
     public static void resetOffers(final @NonNull AbstractVillager trader) throws Throwable {
         final Object nmsTrader = CraftAbstractVillager_getHandle.bindTo(trader).invoke();
-        EntityVillagerAbstract_trades.set(nmsTrader, MerchantRecipeList_class.newInstance());
+        EntityVillagerAbstract_trades.set(nmsTrader, MerchantRecipeList_class.getDeclaredConstructor().newInstance());
         EntityVillagerAbstract_updateTrades.invoke(nmsTrader);
     }
 
@@ -103,8 +96,8 @@ public final class VillagerReflection {
         final Object handle = CraftVillager_getHandle.bindTo(villager).invoke();
         final Map<Integer, Map<?, Set<?>>> behaviors;
         try {
-            behaviors = (Map<Integer, Map<?, Set<?>>>) BehaviorController_behaviorsMap.get(
-                    EntityLiving_getBehaviorController.bindTo(handle).invoke()
+            behaviors = (Map<Integer, Map<?, Set<?>>>) Brain_availableBehaviorsByPriority.get(
+                    LivingEntity_getBrain.bindTo(handle).invoke()
             );
         } catch (final IllegalAccessException e) {
             throw new IllegalStateException("Couldn't access behaviors", e);
